Controllers, Services y implementación del Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/todolist
+spring.datasource.username=postgres
+spring.datasource.password=root0808
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+spring.jpa.hibernate.ddl-auto=update
